<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_view_cards"
        android:orderInCategory="100"
        android:title="@string/action_view_cards" />

    <item
        android:id="@+id/action_review_terms_in_order"
        android:orderInCategory="101"
        android:title="@string/action_review_terms_in_order" />

    <item
        android:id="@+id/action_review_definitions_in_order"
        android:orderInCategory="102"
        android:title="@string/action_review_definitions_in_order" />

    <item
        android:id="@+id/action_review_terms_random_order"
        android:orderInCategory="103"
        android:title="@string/action_review_terms_random_order" />

    <item
        android:id="@+id/action_review_definitions_random_order"
        android:orderInCategory="104"
        android:title="@string/action_review_definitions_random_order" />
</menu>
