<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/gradient_background"
    tools:context=".SplashActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_eduquette" />

        <TextView
            android:id="@+id/tv_eduquette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:fontFamily="casual"
            android:text="@string/app_slogan"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/rl_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_eduquette"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:fontFamily="casual"
                android:text="@string/welcome"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/ll_ask_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_welcome"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/name"
                    android:textAllCaps="true"
                    android:textColor="@color/gradientEnd"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:autofillHints="@string/name_hint"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/name_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />
            </LinearLayout>


            <Button
                android:id="@+id/b_lets_go"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/ll_ask_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_background"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/lets_go"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone">

        <Button
            android:id="@+id/b_new_user"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-medium"
            android:text="@string/new_user"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </RelativeLayout>
</RelativeLayout>