<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".IndexDeckActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_review_cards"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:background="@drawable/gradient_background"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:id="@+id/rl_review_index_card_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/iv_review_cards_subject_logo"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="40dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/ic_eduquette"
                app:layout_collapseMode="parallax"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/tv_review_cards_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/iv_review_cards_subject_logo"
                android:fontFamily="casual"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="138dp"
                tools:layout_editor_absoluteY="16dp" />

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <!--<android.support.design.widget.CoordinatorLayout-->
    <!--android:id="@+id/cl_review_index_card_content"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_below="@id/appbar_review_cards"-->
    <!--android:orientation="vertical"-->
    <!--android:background="@drawable/gradient_background">-->

    <!--<TextView-->
    <!--android:id="@+id/review_index_card_content"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:autoSizeTextType="uniform"-->
    <!--android:layout_margin="30dp"/>-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" />-->
    <!--</android.support.design.widget.CoordinatorLayout>-->

    <RelativeLayout
        android:id="@+id/rl_review_index_card_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar_review_cards"
        android:background="@drawable/gradient_background"
        android:gravity="fill_vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_review_index_card_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="casual"
            android:text="text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_review_index_card_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_review_index_card_text_label"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:fontFamily="casual"
            android:gravity="fill_vertical"
            android:text="text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_review_index_card_buttons"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/rl_review_index_card_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/b_review_card_flip_card"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:gravity="start|center_vertical"
            android:drawableStart="@android:drawable/ic_menu_rotate"
            android:text="@string/flip_card"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/b_review_card_next_card"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:gravity="start|center_vertical"
            android:drawableStart="@android:drawable/ic_media_play"
            android:text="@string/next_card"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/b_review_card_reset"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:gravity="start|center_vertical"
            android:drawableStart="@android:drawable/ic_media_rew"
            android:text="@string/reset_cards"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone"/>


    </RelativeLayout>

</RelativeLayout>