<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".IndexDeckActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_view_decks"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_view_decks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_view_decks_logo"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="40dp"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/ic_eduquette"
                    app:layout_collapseMode="parallax"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <TextView
                    android:id="@+id/tv_view_decks_eduquette"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="80dp"
                    android:layout_toEndOf="@+id/iv_view_decks_logo"
                    android:fontFamily="casual"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    tools:layout_editor_absoluteX="138dp"
                    tools:layout_editor_absoluteY="16dp" />

                <TextView
                    android:id="@+id/tv_view_decks_slogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="40dp"
                    android:layout_toEndOf="@+id/iv_view_decks_logo"
                    android:fontFamily="casual"
                    android:text="@string/app_slogan"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="161dp"
                    tools:layout_editor_absoluteY="77dp" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_view_decks"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_index_deck" />

</android.support.design.widget.CoordinatorLayout>